# r3minder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Reminder.cpp  Reminder.h  ReminderManager.cpp  ReminderManager.h  main.cpp
android/: CMakeLists.txt
base/: CMakeLists.txt  Helper.h  Reminder.h  ReminderManager.cpp  ReminderManager.h  main.cpp
lib/: CMakeLists.txt  Common.cpp  Common.h  Reminder.cpp  Reminder.h  ReminderManager.cpp  ReminderManager.h
lib/src/: Common.h  Helper.h  Reminder.cpp  Reminder.h  ReminderManager.cpp  ReminderManager.h
linux/service/: CMakeLists.txt  NotificationManager.cpp  NotificationManager.h  ReminderManagerDBusAdaptor.cpp  ReminderManagerDBusAdaptor.h  main.cpp
tests/: CMakeLists.txt  ReminderTest.cpp  main.cpp  main.cpp.autosave
